# apps/api/src/system/role/entities/role.entity.ts
@@ -1,1 +1,3 @@
-export class Role {}
+import { SysRoleModel } from '../../../common/models/sys_role';
+
+export class Role extends SysRoleModel {}
